# GamePredictor

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Caddyfile  Dockerfile  docker-compose.yml  mlflow.Dockerfile  pyproject.toml
.claude/: launch.json
.github/workflows/: mirror.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md
.planning/phases/01-data-foundation/: 01-VALIDATION.md  (+1 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
api/: config.py  main.py  schemas.py
api/routes/: predictions.py  spreads.py
data/: __main__.py  ingest.py  loaders.py  sources.py
docs/: DEPLOY.md  vps-nginx-block.conf
features/: __main__.py  definitions.py
features/tests/: conftest.py  test_build_import.py  test_features.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
models/: experiments.jsonl  predict.py  program.md  spread_experiments.jsonl  spread_program.md  train.py  train_spread.py
models/artifacts/: best_model.json  model_exp005.json  spread_model_exp001.json
pipeline/: refresh.py  worker.py
sql/: 00-create-mlflow-db.sh  init.sql
tests/: test_pipeline.py  test_sources.py
tests/api/: conftest.py  test_experiments.py  test_health.py  test_model.py  test_predictions.py
tests/models/: test_logging.py  test_predict.py  test_train.py
(+141 files in other folders)
