[project]
name = "nfl-game-predictor"
version = "0.1.0"
description = "NFL game outcome prediction with calibrated confidence scores"
requires-python = ">=3.11"
dependencies = [
    "nfl-data-py",
    "sqlalchemy>=2.0",
    "psycopg[binary]",
    "pandas>=2.0",
    "polars",
    "python-dotenv",
    "click",
    "tenacity",
    "APScheduler>=3.10,<4.0",
    "xgboost>=3.2.0",
    "shap>=0.51.0",
    "scikit-learn>=1.5.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]

[tool.pytest.ini_options]
testpaths = ["tests", "features/tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
